--- a/json/teaStore.json
+++ b/json/teaStore.json
@@ -25,6 +25,69 @@
             "image": "../teaPics/blackTea.jpg",
             "steepingTime": "Steep at 212° for 5 minutes.",
             "bestBefore": "2021-06-22"
+        },
+        {
+
+            "id": 4,
+            "name": "Masala chai tea",
+            "country": "India",
+            "image": "../teaPics/blackTea.jpg",
+            "steepingTime": "Steep at 200° for 3 minutes.",
+            "bestBefore": "2022-01-08"
+        },
+        {
+
+            "id": 5,
+            "name": "Matcha",
+            "country": "Japan",
+            "image": "../teaPics/blackTea.jpg",
+            "steepingTime": "Steep at 170° for 2 minutes.",
+            "bestBefore": "2023-05-10"
+        },
+        {
+
+            "id": 6,
+            "name": "Sencha",
+            "country": "Japan",
+            "image": "../teaPics/blackTea.jpg",
+            "steepingTime": "Steep at 165° for 2 minutes.",
+            "bestBefore": "2022-10-10"
+        },
+        {
+
+            "id": 7,
+            "name": "Oolong Tea",
+            "country": "China taiwan",
+            "image": "../teaPics/blackTea.jpg",
+            "steepingTime": "Steep at 212° for 3-5 minutes.",
+            "bestBefore": "2023-02-10"
+        },
+        {
+
+            "id": 8,
+            "name": "Pu'erh Tea",
+            "country": "China",
+            "image": "../teaPics/blackTea.jpg",
+            "steepingTime": "Steep at 212° for 3-5 minutes.",
+            "bestBefore": "2023-09-20"
+        },
+        {
+
+            "id": 9,
+            "name": "White Tea",
+            "country": "China",
+            "image": "../teaPics/blackTea.jpg",
+            "steepingTime": "Steep at 200° for 3 minutes.",
+            "bestBefore": "2024-01-15"
+        },
+        {
+
+            "id": 10,
+            "name": "Herbal Teas",
+            "country": "China",
+            "image": "../teaPics/blackTea.jpg",
+            "steepingTime": "Steep at 212° for 5-10 minutes.",
+            "bestBefore": "2022-08-10"
         }
     ]
 
