--- a/json/teaStore.json
+++ b/json/teaStore.json
@@ -12,7 +12,7 @@
         {
 
             "id": 2,
-            "name": "Grean tea",
+            "name": "Green tea",
             "price":"220:-/hg",
             "country": "China",
             "image": "../teaPics/greenTea.jpg",
